<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>int_szam_mod_feladat</name>
  <version>0.3.4</version>
  <description>
    int_szam_mod beadando
  </description>
  <maintainer email="megbalaa@gmail.com">Balazs Megyeri</maintainer>
  <license>Apache License, Version 2.0</license>

  <author email="megbalaa@gmail.com">Balazs Megyeri</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
